add JdbcUtil class and test

--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -1,5 +1,5 @@
-jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:sqlite:test.db
+jdbc.driver=org.sqlite.JDBC
+jdbc.url=jdbc:sqlite::memory:
 
 # username and password for mysql or postgresql
 # jdbc.username=root
