--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,5 +1,6 @@
 jdbc.driver=org.sqlite.JDBC
-jdbc.url=jdbc:sqlite::memory:
+# jdbc.url=jdbc:sqlite::memory:
+jdbc.url=jdbc:sqlite:test.sqlite.db
 
 # username and password for mysql or postgresql
 # jdbc.username=root
