--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -5,3 +5,5 @@ jdbc.url=jdbc:sqlite:test.sqlite.db
 # username and password for mysql or postgresql
 # jdbc.username=root
 # jdbc.password=123456
+
+mapper.annotation.paths = /com/lbd/batis/mapper
