--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -7,3 +7,4 @@ jdbc.url=jdbc:sqlite:test.sqlite.db
 # jdbc.password=123456
 
 mapper.annotation.paths = /com/lbd/batis/mapper
+mapper.xml.paths = /mappers/
