add plugin proxy

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -8,3 +8,7 @@ jdbc.url=jdbc:sqlite:test.sqlite.db
 
 mapper.annotation.paths = /com/lbd/batis/mapper
 mapper.xml.paths = /mappers/
+
+
+# plugin config
+plugin.paths = "com.lbd.batis.plugin.plugins.LogPlugin"
