--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -11,4 +11,4 @@ mapper.xml.paths = /mappers/
 
 
 # plugin config
-plugin.paths = "com.lbd.batis.plugin.plugins.LogPlugin"
+plugin.paths = com.lbd.batis.plugin.plugins.LogPlugin
